<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.oaklandcc.energydbkhanhdo.EnergyDetailsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:id="@+id/buttonTime"
            android:layout_weight="1"
            android:onClick="onClickTime" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/now_button"
            android:id="@+id/buttonNow"
            android:layout_weight="1"
            android:onClick="onClickNow" />
    </LinearLayout>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingEnergy"
        android:numStars="7"
        android:stepSize="0.5"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/buttonSave"
        android:onClick="onClickSave" />
</LinearLayout>
